--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Salam Qasim</h1>
-    <span>salam</span>
+    
+    <form action="">
+
+
+        <label for="name">Adiniz</label>
+        <input type="text" id="name">
+    </form>
 </body>
 </html>
